--- a/kubernetes/config-map.yaml
+++ b/kubernetes/config-map.yaml
@@ -7,4 +7,4 @@ metadata:
   name: feature-toggle
   namespace: svillalon
 data:
-  LOCATION_FEATURE_ENABLED: "True"
+  LOCATION_FEATURE_ENABLED: "False"
